hphp/hack/test/sound_dynamic/typing/top_level_2_dc.bad.php
<?hh

class A<T> {}

<<__DynamicallyCallable>>
function foo() : A<int> {
  return new A<int>();
}
